Updated HTML pages, images, and CSS styling

--- a/index.html
+++ b/index.html
@@ -2,31 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Gullywood Entertainment - Home</title>
+  <title>Gullywood Entertainment</title>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
+  <!-- Header -->
   <header>
-    <h1>Gullywood Entertainment</h1>
+    <div class="logo">
+      <h1>Gullywood</h1>
+    </div>
     <nav>
       <a href="index.html">Home</a>
       <a href="ott.html">OTT</a>
-      <a href="shortfilms.html">Short Films Festival</a>
+      <a href="shortfilms.html">Short Films</a>
+      <a href="#">News</a>
+      <a href="#">Sign Up</a>
     </nav>
   </header>
 
-  <section class="hero"  style="background-image: url('images/hero-banner.jpg');"> 
-    <h2>Welcome to Gullywood</h2>
-    <p>Your daily source of entertainment news, OTT updates, and short film festivals.</p>
+  <!-- Hero Section -->
+  <section class="hero">
+    <img src="images/hero-banner.jpg" alt="Hero Banner">
+    <div class="hero-text">
+      <h1>Welcome to Gullywood</h1>
+      <p>Entertainment news, OTT updates & short film festivals.</p>
+    </div>
   </section>
 
-  <section class="section">
-    <h3>Featured News</h3>
-    <p>Stay tuned for the latest gossip, trailers, and entertainment updates from Bollywood and beyond!</p>
+  <!-- Featured News -->
+  <section class="featured">
+    <h2>Featured News</h2>
+    <div class="feature-cards">
+      <div class="card">
+        <img src="images/feature1.jpg" alt="Feature 1">
+        <h3>Big Bollywood Release This Friday</h3>
+        <p>Catch all the details about the upcoming blockbuster.</p>
+      </div>
+      <div class="card">
+        <img src="images/feature2.jpg" alt="Feature 2">
+        <h3>Top 5 OTT Shows To Binge</h3>
+        <p>Handpicked OTT gems for your weekend watchlist.</p>
+      </div>
+    </div>
   </section>
 
+  <!-- Signup Section -->
+  <section class="signup">
+    <h2>Stay Updated!</h2>
+    <p>Subscribe to our newsletter for daily updates.</p>
+    <input type="email" placeholder="Enter your email">
+    <button>Sign Up</button>
+  </section>
+
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Gullywood Entertainment. All rights reserved.</p>
   </footer>
