--- a/ott.html
+++ b/ott.html
@@ -2,38 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Gullywood Entertainment - OTT</title>
+  <title>Gullywood OTT</title>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-  <header>
-    <h1>Gullywood Entertainment</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="ott.html">OTT</a>
-      <a href="shortfilms.html">Short Films Festival</a>
-    </nav>
-  </header>
+<header>
+  <div class="logo">
+ <h1>Gullywood</h1>
+  </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="ott.html">OTT</a>
+    <a href="shortfilms.html">Short Films</a>
+    <a href="#">News</a>
+    <a href="#">Sign Up</a>
+  </nav>
+</header>
 
-  <section class="hero" style="background-image: url('images/ott-shows.jpg');">
-    <h2>OTT Premieres & Releases</h2>
-    <p>Get all the latest updates from Netflix, Amazon Prime, Disney+ Hotstar and more.</p>
-  </section>
+<section class="hero">
+  <img src="images/ott-shows.jpg" alt="OTT Banner">
+  <div class="hero-text">
+    <h1>Latest OTT Releases</h1>
+    <p>Check out the hottest new shows and movies on your favorite OTT platforms.</p>
+  </div>
+</section>
 
-  <section class="section">
-    <h3>Latest OTT Releases</h3>
-    <ul>
-      <li>Netflix: Series XYZ – June 15, 2025</li>
-      <li>Amazon Prime: Movie ABC – June 20, 2025</li>
-      <li>Disney+ Hotstar: Series DEF – June 22, 2025</li>
-    </ul>
-  </section>
+<section class="featured">
+  <h2>Top Picks This Week</h2>
+  <div class="feature-cards">
+    <div class="card">
+      <img src="images/ottfeature1 copy.jpg" alt="Show 1">
+      <h3>The Midnight Hunt</h3>
+      <p>A thrilling mystery drama streaming now on Vflix.</p>
+    </div>
+    <div class="card">
+      <img src="images/ottfeature2.jpg" alt="Show 2">
+      <h3>Comedy Club</h3>
+      <p>Laugh out loud with this hilarious new stand-up special on LaughTV.</p>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    <p>&copy; 2025 Gullywood Entertainment. All rights reserved.</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 Gullywood Entertainment. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
