--- a/shortfilms.html
+++ b/shortfilms.html
@@ -2,38 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Gullywood Entertainment - Short Films Festival</title>
+  <title>Gullywood Short Films Festival</title>
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-  <header>
-    <h1>Gullywood Entertainment</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="ott.html">OTT</a>
-      <a href="shortfilms.html">Short Films Festival</a>
-    </nav>
-  </header>
+<header>
+  <div class="logo">
+  <H1> Gullywood</H1>
+  </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="ott.html">OTT</a>
+    <a href="shortfilms.html">Short Films</a>
+    <a href="#">News</a>
+    <a href="#">Sign Up</a>
+  </nav>
+</header>
 
-  <section class="hero" style="background-image: url('images/shortfilms-banner.jpg');">
-    <h2>Short Films Festival</h2>
-    <p>Celebrating creative short films and emerging filmmakers from around the country.</p>
-  </section>
+<section class="hero">
+  <img src="images/shortfilms-banner.jpg" alt="Short Films Banner">
+  <div class="hero-text">
+    <h1>Short Films Festival</h1>
+    <p>Discover incredible short films by rising independent creators.</p>
+  </div>
+</section>
 
-  <section class="section">
-    <h3>Top Featured Films</h3>
-    <ul>
-      <li><strong>"Chasing Dreams"</strong> – Director: Riya Sharma</li>
-      <li><strong>"Midnight Conversations"</strong> – Director: Aarav Mehta</li>
-      <li><strong>"The Last Letter"</strong> – Director: Kavya Kapoor</li>
-    </ul>
-  </section>
+<section class="featured">
+  <h2>Editor's Picks</h2>
+  <div class="feature-cards">
+    <div class="card">
+      <img src="images/shortfilm1.jpg" alt="Film 1">
+      <h3>Twilight Memories</h3>
+      <p>A touching story of love and loss in 10 minutes.</p>
+    </div>
+    <div class="card">
+      <img src="images/shortfilm2.jpg" alt="Film 2">
+      <h3>The Last Letter</h3>
+      <p>A war-time drama with an unforgettable twist ending.</p>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    <p>&copy; 2025 Gullywood Entertainment. All rights reserved.</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 Gullywood Entertainment. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
